# tara1.1

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: make_pi_dataset.py  sample.py  train.py
src/tara11_pi/: __init__.py  data.py  model.py  tokenizer.py
