[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tara11-pi"
version = "0.1.0"
description = "Continuous pretraining experiment for modeling pi digit sequences."
requires-python = ">=3.12"
dependencies = [
  "mpmath>=1.3.0",
  "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["src"]
